<resources>
    <string name="app_name">Student App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_notes">Search Notes</string>
    <string name="take_notes">Take Notes</string>
    <string name="manage_attendance">Manage Attendance</string>
    <string name="things_to_do">Things to do</string>
    <string name="note_title">Note Title</string>
    <string name="type_your_note_here">Type your note here...</string>
    <string name="settings">Settings</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">cancel</string>
    <string name="thing_to_do">Thing to do...</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_description">Todo Description</string>
    <string name="delete_todo">Delete Todo</string>
    <string name="are_you_sure_you_want_to_delete_this_todo">Are you sure you want to delete this todo ?</string>
</resources>