<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes_icon"
            android:title="@string/take_notes" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/attendance_icon"
            android:title="@string/manage_attendance" />

        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/todo_icon"
            android:title="@string/things_to_do" />


    </group>
    <item
        android:icon="@drawable/ic_settings"
        android:title="@string/settings">
    </item>
</menu>