<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/deleteNoteContainer"
    android:layout_gravity="center"
    android:layout_margin="13dp"
    android:padding="3dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/image_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_delete"
        app:tint="@color/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="@string/delete_note"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_delete"
        app:layout_constraintTop_toTopOf="@+id/image_delete"
        app:layout_constraintStart_toEndOf="@+id/image_delete"/>

    <TextView
        android:id="@+id/deleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        app:layout_constraintTop_toBottomOf="@+id/image_delete"/>

    <TextView
        android:id="@+id/deleteNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/delete"
        app:layout_constraintTop_toBottomOf="@id/deleteNoteMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
       android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/cancelDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/deleteNoteMessage"
        app:layout_constraintEnd_toStartOf="@id/deleteNoteText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />




</androidx.constraintlayout.widget.ConstraintLayout>