<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:id="@+id/addTodoContainer"
    android:padding="10dp"
    android:background="@drawable/background_dialog"
    android:theme="@style/AppTheme.NoActionBar">

    <EditText
        android:id="@+id/textTodoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:hint="@string/thing_to_do"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"/>

    <EditText
        android:id="@+id/textTodoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/description"
        android:textColorHint="@color/colorTextHint"
        android:fontFamily="@font/ubuntu_regular"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:padding="4dp"
        android:inputType="textMultiLine"
        android:layout_below="@+id/textTodoTitle"
        android:layout_margin="10dp"
        android:autofillHints="" />

<!--    <TextView-->
<!--        android:id="@+id/addTodo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/add"-->
<!--        android:textAllCaps="true"-->
<!--        android:textSize="15sp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:fontFamily="@font/ubuntu_medium"-->
<!--        android:textColor="@color/colorAccent"-->
<!--        android:layout_below="@+id/textTodoDescription"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:padding="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:layout_alignParentEnd="true" />-->


    <ImageView
        android:id="@+id/addTodo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_done"
        app:tint="@color/colorIcons"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/textTodoDescription"/>

<!--    <ImageView-->
<!--        android:id="@+id/deleteTodo"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_below="@id/textTodoDescription"-->
<!--        android:layout_alignEnd="@id/addTodo"-->
<!--        android:layout_alignRight="@id/addTodo"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_marginEnd="50dp"-->
<!--        android:layout_marginRight="50dp"-->
<!--        android:contentDescription="@string/app_name"-->
<!--        android:src="@drawable/ic_delete"-->
<!--        android:visibility="gone"-->
<!--        app:tint="@color/delete"-->
<!--        tools:visibility="visible" />-->

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@+id/textTodoDescription"
        android:layout_alignParentLeft="true"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorAccent"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentStart="true" />


</RelativeLayout>