<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                android:layout_marginTop="14dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcons"
                android:layout_marginLeft="15dp" />

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_delete"
                app:tint="@color/delete"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toTopOf="@+id/image_back"
                app:layout_constraintBottom_toBottomOf="@+id/image_back"
                app:layout_constraintEnd_toStartOf="@+id/image_save"
                android:layout_marginRight="15dp" />

            <ImageView
                android:id="@+id/image_save"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorIcons"
                android:layout_marginEnd="15sp"
                app:layout_constraintBottom_toBottomOf="@id/image_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_back"
                android:layout_marginRight="15sp"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/image_back"/>

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title"
                android:inputType="text"
                android:importantForAutofill="no"
                android:textColorHint="@color/colorTextHint"
                android:textSize="25sp"
                android:background="@null"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:includeFontPadding="false"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@+id/image_save"/>

            <TextView
                android:id="@+id/text_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTextHint"
                android:textSize="12sp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:hint="date"
                android:paddingTop="4dp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:textColor="@color/colorTextHint"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                app:layout_constraintTop_toBottomOf="@id/note_title"
                app:layout_constraintStart_toStartOf="@id/note_title"
                app:layout_constraintEnd_toEndOf="@id/note_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="22sp"
                android:layout_marginStart="22sp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/text_date_time"/>

            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18sp"
                android:hint="@string/type_your_note_here"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:gravity="top"
                android:textColor="@color/colorWhite"
                android:includeFontPadding="false"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:minHeight="100dp"
                android:fontFamily="@font/ubuntu_medium"
                app:layout_constraintTop_toBottomOf="@id/text_date_time"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</RelativeLayout>